[package]
name = "TheBusCmd"
version = "1.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
the-bus-telemetry = "2.0.0"
# the-bus-telemetry = { path = "../TheBusTelemetry" }

[[bin]]
name = "TheBusInfo"
path = "src/bin/info.rs"
