[package]
name = "TheBusCmd"
version = "1.5.0"
edition = "2024"
readme = "README.md"
authors = ["ThatZok <af@komplix.de>"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
the-bus-telemetry = "3.0.0"
komsi = "0.5.0"

[[bin]]
name = "TheBusInfo"
path = "src/bin/info.rs"
